[package]
name = "payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1.20", features = ["serde-float" ] }
rust_decimal_macros = "1.20"
env_logger = "0.9"
log = "0.4"